# Computational-Electrodynamics

./: .gitignore  Dirac delta functions.ipynb  Green's functions in electrostatics.ipynb  Multipole expansion in electrostatics.ipynb  Poisson's equation.ipynb  README.md  repo-mindmap.md
Formula Sheet/: dielectrics_formula_sheet.tex  dirac_delta_formula_sheet.tex
Griffiths-problems/: griffiths_problem_index_aa.tex
Jackson-problems/: Cooming_soon.md  chapter-1.tex
codes/: dirac_delta_game.py  dirac_delta_game_v2.py  generate_dirac_delta_v2_plots.py  generate_method_of_images_sphere_gif.py  generate_yee_fdtd_gif.py  plot_yee_fdtd_cpp_output.py  yee_fdtd_vti.py
codes/amrex/fft_poisson_benchmark/: CMakeLists.txt  README.md  inputs  main.cpp
docs/: charge-hunt.html  charge-hunt.js  fft-poisson.html  flux-box.html  flux-box.js  index.html  lab.html  lab.js  maxwell-lecture.html  maxwell-lecture.js  maxwell-problem-coach.json  maxwell-qa-index.json  maxwell-shell-v2.before-conversational-coach-2026-04-18.js  maxwell-shell-v2.js  maxwell.js  notes.html  repo-index.json  repo-mindmap.html  repo-mindmap.js  styles.css  styles.maxwell.before-cleanup-2026-04-18.css  topics.html  visuals.html
notebooks/: AMReX Comparison - 3D FFT Poisson Benchmark.ipynb  Dielectrics in electrostatics.ipynb  Dirac delta functions.ipynb  Electromagnetic Radiation.ipynb  FFT Poisson solver.ipynb  Jackson 2.11 Line Charge Outside a Conducting Cylinder.ipynb  Jackson 2.12 Poisson Integral for a Cylinder.ipynb  Jackson 2.20 Two-Dimensional Electric Quadrupole Focusing Fields.ipynb  (+8 more)
(+60 files in other folders)
